# Margin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260618_0001_portfolio.py  20260618_0002_news.py  20260618_0003_vector.py  20260618_0004_evidence.py  20260619_0005_research.py  20260619_0006_strategy.py  20260619_0007_dashboard.py  20260619_0008_holdings_monitoring.py  20260619_0009_audit_records.py  20260622_0010_data_warehouse.py  20260622_0015_strategy_config_v02.py  20260622_0016_tool_policy_versions.py  20260622_0017_strategy_audit_idempotency.py  20260622_0018_deployment_audit_v02.py  20260622_0019_capacity_version_counters.py  20260622_0020_step_input_ref.py  20260622_0021_valuation_discovery_v02.py  20260622_0022_quant_input_snapshot_fields.py  20260622_0023_quant_result_ranks.py  20260622_0024_effective_assessment_pointer_fields.py  20260622_0025_news_refresh_v02.py  20260622_0026_text_indexing_v02.py  20260622_0027_rag_evidence_v02.py  20260622_0028_rag_evidence_claim_links.py  20260622_0029_evidence_locator_details.py  20260623_0030_ai_delta_review_graph.py  20260623_0031_remove_holdings.py  20260623_0032_data_sync_request.py  20260623_0033_research_review_conclusion.py  20260623_0034_effective_pointer_lineage.py  20260623_0035_data_acquisition_policy.py  20260623_0036_tushare_source_system.py  20260623_0037_company_pool_view.py  20260623_0038_company_pool_tushare_gate.py  20260623_0039_company_pool_exclude_delisting.py  20260624_0040_quant_history_index.py  20260624_0041_akshare_source_system.py  20260624_0042_analysis_mart.py  20260625_0043_quant_feature_mart.py  20260625_0044_remove_dead_tables.py  (+22 more)
docker/: prometheus.yml
docs/: PROJECT_v0.1_OPEN_SOURCE.md  README.md
docs/code/: 00-shared.md  01-data_provider.md  02-holdings.md  03-filing_websearch.md  04-text_indexing.md  05-rag_evidence.md  06-multi_agent_research.md  07-strategy_config.md  08-research_candidate_dashboard.md  09-holdings_monitoring.md  10-deployment_audit.md  11-valuation_discovery.md  README.md
docs/release/: v0.1-checklist.md
docs/research/: backtest_assumptions.md
scripts/: add_google_docstrings.py  backtest_three_quant_pools_db.py  bootstrap_config.py  dev.py  docker_dev.py  health_check.py  migrate.py  probe_tushare_financial_bulk.py  probe_tushare_quant_endpoints.py  repair_index_weight_metadata.py  run_tushare_backfill.py  seed_demo.py  smoke_agentic_news.py  smoke_ai_delta_review.py  smoke_dashboard_e2e.py  smoke_data_provider.py  smoke_full_v02.py  smoke_news_websearch.py  smoke_rag_evidence.py  smoke_text_indexing.py  smoke_valuation_discovery_p0.py  smoke_valuation_discovery_p1.py  snapshot_store.py  verify_migrations.py  worker_health_check.py
tests/: conftest.py  test_backtest_three_quant_pools_theme_toggle.py  test_database_safety.py  test_dev_script.py  test_docker_dev_script.py  test_migration_v02.py  test_release_hardening.py  test_smoke_dashboard_e2e.py  test_smoke_full_v02.py  test_smoke_valuation_discovery_p1.py  test_v02_scope_boundary.py  test_worker.py  test_worker_orchestration_v02.py
web/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  postcss.config.mjs  vitest.config.ts  vitest.setup.ts
(+942 files in other folders)
