[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "margin"
version = "0.1.0"
description = "Margin — 本地优先、证据驱动、策略可配置的开源投资研究系统"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Margin" }]
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
data = [
    "akshare>=1.12",
    "tushare>=1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/margin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["margin"]
