[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "margin"
version = "0.1.0"
description = "Margin — 本地优先、证据驱动、策略可配置的开源投资研究系统"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Margin" }]
dependencies = [
    "alembic>=1.14",
    "apscheduler>=3.10",
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pypdf>=5.0",
    "prometheus-client>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
data = [
    "akshare>=1.12",
    "tushare>=1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/margin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["margin"]
